Add true/false and essay question types

--- a/mkdocs_exam/css/exam.css
+++ b/mkdocs_exam/css/exam.css
@@ -59,6 +59,12 @@ input[type="radio"].wrong {
 .exam input[type="text"].wrong {
   border: 2px solid red;
 }
+.exam textarea.correct {
+  border: 2px solid green;
+}
+.exam textarea.wrong {
+  border: 2px solid red;
+}
 .content {
   margin: 10px;
 }
