--- a/mkdocs_exam/css/exam.css
+++ b/mkdocs_exam/css/exam.css
@@ -1,5 +1,12 @@
+/* Define custom properties for exam colors */
+:root {
+  --exam-correct-color: var(--md-accent-fg-color, #00e676);
+  --exam-wrong-color: var(--md-code-hl-color, #f44336);
+  --exam-border-color: var(--md-default-fg-color--light, #ccc);
+}
+
 .exam {
-  border: 1px solid black;
+  border: 1px solid var(--exam-border-color);
   padding: 1rem;
   margin: 1rem 0;
 }
@@ -22,14 +29,25 @@ form button {
   text-decoration: none;
   display: inline-block;
   font-size: 0.8rem;
+  cursor: pointer;
+  transition: opacity 0.2s ease;
+}
+
+form button:hover {
+  opacity: 0.8;
+}
+
+form button:focus {
+  outline: 2px solid var(--md-accent-fg-color);
+  outline-offset: 2px;
 }
 
 .wrong label {
-  color: red;
+  color: var(--exam-wrong-color);
 }
 
 .correct label {
-  color: green;
+  color: var(--exam-correct-color);
 }
 
 fieldset {
@@ -42,50 +60,66 @@ fieldset input {
   margin: 0 10px;
 }
 
+fieldset input:focus {
+  outline: 2px solid var(--md-accent-fg-color);
+  outline-offset: 2px;
+}
+
 fieldset label {
   margin: 0 10px;
 }
 
 label.correct {
-  color: green;
+  color: var(--exam-correct-color);
 }
 
 label.wrong {
-  color: red;
+  color: var(--exam-wrong-color);
 }
 
 input[type="radio"].correct {
-  accent-color: green;
+  accent-color: var(--exam-correct-color);
 }
 
 input[type="radio"].wrong {
-  accent-color: red;
+  accent-color: var(--exam-wrong-color);
 }
 
 .exam input[type="text"].correct {
-  border: 2px solid green;
+  border: 2px solid var(--exam-correct-color);
 }
 
 .exam input[type="text"].wrong {
-  border: 2px solid red;
+  border: 2px solid var(--exam-wrong-color);
+}
+
+.exam input[type="text"]:focus {
+  outline: 2px solid var(--md-accent-fg-color);
+  outline-offset: 2px;
 }
 
 .exam textarea.correct {
-  border: 2px solid green;
+  border: 2px solid var(--exam-correct-color);
 }
 
 .exam textarea.wrong {
-  border: 2px solid red;
+  border: 2px solid var(--exam-wrong-color);
+}
+
+.exam textarea:focus {
+  outline: 2px solid var(--md-accent-fg-color);
+  outline-offset: 2px;
 }
 
 .exam select.correct {
-  border: 2px solid green;
+  border: 2px solid var(--exam-correct-color);
 }
 
 .exam select.wrong {
-  border: 2px solid red;
+  border: 2px solid var(--exam-wrong-color);
 }
 
-.content {
-  margin: 10px;
+.exam select:focus {
+  outline: 2px solid var(--md-accent-fg-color);
+  outline-offset: 2px;
 }
